# Sentinel_Linux2.0

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHECKPOINT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.example  docker-compose.yml
deploy/docker/: Dockerfile
deploy/grafana/provisioning/dashboards/: sentinel.json
deploy/prometheus/: prometheus.yml
docs/: COVERAGE.md  THREAT_MODEL.md  sbom.txt
docs/adr/: 0001-architecture-overview.md  0002-tooling-choices.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py
rules/: account-creation.yml  base64-execution.yml  c2-beacon-port.yml  cron-persistence.yml  interactive-shell-spawn.yml  kernel-module-load.yml  log-tampering.yml  new-listening-service.yml  new-suid-binary.yml  passwd-file-modified.yml  reverse-shell-process.yml  shadow-file-modified.yml  ssh-brute-force.yml  ssh-root-login.yml  sudoers-modified.yml  suspicious-tmp-exec.yml  world-writable-sensitive.yml
scripts/: demo.sh  generate_coverage_matrix.py  soak_test.py  test_attacks.py
src/sentinel/: __init__.py  events.py  logging.py  metrics.py  settings.py
src/sentinel/alerting/: __init__.py  manager.py  model.py
src/sentinel/alerting/sinks/: __init__.py  base.py  console.py  email.py  webhook.py
src/sentinel/api/: __init__.py  app.py  schemas.py  security.py
src/sentinel/collectors/: __init__.py  authlog.py  base.py  integrity.py  netparse.py  network.py  process.py
src/sentinel/detection/: __init__.py  engine.py  evaluator.py  loader.py  schema.py
src/sentinel/normalizer/: __init__.py  enrich.py  mapper.py  raw.py
src/sentinel/pipeline/: __init__.py  dedup.py  queue.py  runner.py
src/sentinel/storage/: __init__.py  database.py  models.py  repository.py
stubs/regex/: __init__.pyi
stubs/yaml/: __init__.pyi
tests/: conftest.py  test_alerting_console.py  test_alerting_email.py  test_alerting_manager.py  test_alerting_model.py  test_alerting_sink_base.py  test_alerting_webhook.py  test_api_endpoints.py  test_api_rate_limit.py  test_api_security.py  test_collectors_authlog.py  test_collectors_base.py  test_collectors_integrity.py  test_collectors_network.py  test_collectors_process.py  test_detection_engine.py  test_detection_evaluator.py  test_detection_loader.py  test_detection_rules.py  test_detection_schema.py  test_events.py  test_logging.py  test_metrics.py  test_migrations.py  test_normalizer.py  test_pipeline_dedup.py  test_pipeline_keystone.py  test_pipeline_queue.py  test_settings.py  test_smoke.py  test_storage.py
tests/fixtures/normalizer/: auth_expected.json  auth_raw.json  file_expected.json  file_raw.json  network_expected.json  network_raw.json  process_expected.json  process_raw.json
