[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sentinel-linux"
version = "0.1.0.dev0"
description = "Host-based security monitoring framework for Linux: collectors, ECS-aligned normalization, MITRE ATT&CK-mapped detection, hardened alerting."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "José Ricardo Solís Arias", email = "ricardo02solis@gmail.com" }]
keywords = ["security", "monitoring", "siem", "linux", "mitre-attack", "nist-csf", "detection-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.5,<3",
    "structlog>=24.4",
]

[project.urls]
Homepage = "https://github.com/RichSsa24/Sentinel_Linux"
Repository = "https://github.com/RichSsa24/Sentinel_Linux"
Issues = "https://github.com/RichSsa24/Sentinel_Linux/issues"

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "bandit[toml]>=1.7.10",
    "pip-audit>=2.7",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
    "hypothesis>=6.115",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.uv]
# Install the `dev` group by default so `uv sync` gives contributors the
# full toolchain (ruff, mypy, bandit, pytest, pre-commit, etc.) in one step.
default-groups = ["dev"]

# ---------------------------------------------------------------------------
# Ruff — lint + format (strict but practical ruleset).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist", "deploy/grafana/provisioning"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez (no naive datetimes — §3.3)
    "T20",  # flake8-print (no print in src — §3.3)
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "ASYNC",
    "ARG",  # unused arguments
    "PTH",  # use pathlib
    "TRY",  # try/except antipatterns
    "EM",   # raise from string literal
    "ANN",  # type annotations
    "RET",  # return values
    "PL",   # pylint subset
]
ignore = [
    "ANN401",  # allow `Any` only where consciously chosen (e.g. logging processors)
    "ANN101",  # deprecated upstream — `self` should not need an annotation
    "ANN102",  # deprecated upstream — `cls` should not need an annotation
    "PLR0913", # too-many-arguments — judgment call
    "TRY003",  # long messages in `raise` — acceptable for clear errors
    "EM101",   # raw string in exception — paired with TRY003 above
    "EM102",   # f-string in exception
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ANN",     # tests don't need full annotations
    "ARG",     # fixtures appear unused
    "PLR2004", # magic numbers in assertions
    "S105",    # hard-coded fake passwords for redaction tests
    "S106",    # hard-coded fake passwords as kwargs
]
"scripts/**/*.py" = ["T20"]  # scripts may print

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy — strict on first-party code.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
disallow_any_unimported = true
extra_checks = true
files = ["src/sentinel", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ---------------------------------------------------------------------------
# Pytest + Coverage.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: end-to-end pipeline tests",
    "security: tests that exercise a security control",
]
filterwarnings = [
    "error",
    # pydantic-settings can warn about env-file handling in test mode; allow.
    "default::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/sentinel"]
branch = true
parallel = false

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

# ---------------------------------------------------------------------------
# Bandit — security linter. Scans src/ in CI and pre-commit.
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["src/sentinel"]
exclude_dirs = ["tests", ".venv", "build", "dist"]
# B101 (assert) only relevant in tests, already excluded; no global skips here.
